syntax errors fixed

--- a/content/design.tex
+++ b/content/design.tex
@@ -3,7 +3,8 @@ Description of how you expect your design can comply with existing laws (how the
 \\ Short description of which laws the system must comply to. 
 \\ Description of reviews we've had with Per. 
 \section{Standards}
-European standards according to Electromagnetic compatibility is found on European Commission website\footnote{url\http://ec.europa.eu/enterprise/policies/european-standards/harmonised-standards/electromagnetic-compatibility/index_en.htm#Note 2.3}}. The standard: \textit{EN 50412-2-1:2005} deals with: \textit{Power line communication apparatus and systems used in low-voltage installations in the frequency range 1.6 MHz to 30 MHz}. However, the power line is not to work on a low-voltage installation but in an isolated DC environment. Another reason why not to use this standard is its expire date: 01/04/2008. Instead of this standard a generic standard is used.
+European standards according to Electromagnetic compatibility is found on European Commission website \footnote{\url{http://ec.europa.eu/enterprise/policies/european-standards/harmonised-standards/electromagnetic-compatibility/index\_en.htm\#Note 2.3}}. 
+The standard: \textit{EN 50412-2-1:2005} deals with: \textit{Power line communication apparatus and systems used in low-voltage installations in the frequency range 1.6 MHz to 30 MHz}. However, the power line is not to work on a low-voltage installation but in an isolated DC environment. Another reason why not to use this standard is its expire date: 01/04/2008. Instead of this standard a generic standard is used.
 
 
 \subsection{Review 1}
