init design added

--- a/content/appendix.tex
+++ b/content/appendix.tex
@@ -1,1 +1,6 @@
 \chapter{Appendix}
+Report:\\
+EPRO\_3\_\&\_4\_PLC - Hardware\\
+Tutorial:\\
+PCB Design Tutorial by David L. Jones, link:\\
+\url{www.alternatezone.com/electronics/files/PCBDesignTutorialRevA.pdf}
