--- a/content/test.tex
+++ b/content/test.tex
@@ -7,10 +7,11 @@ The measurement in a TEM-cell can be compared to an open air measurement if the 
 
 
 \section{Immunity test}
+Down below different test cases are described, which the product has to fulfill in order to be EMC proved and get the CE mark. The different tests are not performed as this kind of test can be destructive to the product and we only have one board mounted for our use. Normally the board will also be placed in a box (preferable a metal box connected to ground) to decrease the points of electrostatic discharge. 
 \subsection{Electrostatic discharge}
 The test method is based on a generator (ESD-pistol) where two different kinds of discharges is performed: air discharge and discharge by contact. 
 \\ The standard describes test values for up to 15kV for air discharge and up to 8kV for discharge at contact.
-\\ In many product standards the values 8kV and 4kV is used (EN61000-6-1 and -2).
+\\ However, in many product standards the values 8kV and 4kV is used (EN61000-6-1 and -2).
 
 \subsection{HF irradiation}
 For business and light industry, EN61000-6-1, test level 3V/m
