--- a/preamble.tex
+++ b/preamble.tex
@@ -17,7 +17,7 @@
 \usepackage{pdfpages}										% include pdf-doc with the command (page number) \includepdf[pages=]{fil.pdf}	
 \usepackage{url}													% Til at sætte urler op med. Virker sammen med hyperref
 
-\flushbottom  %makes all pages equal size
+%\flushbottom  %makes all pages equal size
 
 
 % ¤¤ Visuelle referencer ¤¤ %
